tdf#93018 - Copying forms not working anymore

Bug introduced by commit fb14be5f8f74f83ba89e15f891ddf1f753dcc62f
"create new 'enum class' SotClipboardFormatId to unify types"

Change-Id: I3febb927f658ac27d2b864869775db3b71940a5c